@@ -111,7 +111,7 @@ if [ ! -f "$dest_vol"/.ChameleonExists ]; then
                 value="${options[$arrayCount]#*=}"
                 # escape any spaces
                 keyToUse=$( echo $keyRead | sed 's/ /\\ /g' )
-                if [ "${keyToUse}" != "DONT" ] && [ "${value}" != "USE" ]; then
+                if [ "${keyToUse}" != "DONT" ] && [ "${value}" != "ADD" ]; then
                     sudo /usr/libexec/plistbuddy -c "Add :${keyToUse} string ${value}" "$tempOCBP"
                     returnValue=$?
 					if [ ${returnValue} -ne 1 ]; then
@@ -123,7 +123,19 @@ if [ ! -f "$dest_vol"/.ChameleonExists ]; then
             fi	
             (( arrayCount++ ))
         done < <(ls "${chamTemp}"/options )
-
+    
+  		# If exclusive options were used and the 'None' option was chosen,
+  		# then a dummy file named DONT=ADD would be in /$chamTemp/Extra/options.
+		# If that was the only option then the above code would have made a 
+		# temporary Extra folder with a default org.chameleon.Boot.plist
+		# In this case we don't need it and should discard it otherwise the folder
+		# will be copied to the users / directory when it's not wanted.
+		if [ ${arrayCount} == 1 ] && [ "${keyToUse}" == "DONT" ] && [ "${value}" == "ADD" ]; then
+			if [ -e "${chamTemp}"/Extra ] && [ ! -e "${chamTemp}"/Extra/Themes ] && [ ! -e "${chamTemp}"/Extra/Modules ]; then
+				rm -r -f "$chamTemp"/Extra
+			fi
+		fi
+	
         if [ $kernelFlagCount -gt 0 ]; then
             # Add kernel flags
             for (( i=0 ; i < $kernelFlagCount ; i++ ))
@@ -185,7 +197,7 @@ if [ ! -f "$dest_vol"/.ChameleonExists ]; then
 		done
     fi
 else
-    echo "Removing /.ChameleonExists file"
+    #echo "Removing /.ChameleonExists file"
     "$scriptDir"InstallLog.sh "${dest_vol}" "Cleanup 4"
     rm "$dest_vol"/.ChameleonExists
 fi
@@ -196,21 +208,21 @@ fi
 
 # delete the temporary Chameleon folder
 if [ -e "$chamTemp" ]; then
-	echo "Removing $chamTemp directory"
+	#echo "Removing $chamTemp directory"
 	"$scriptDir"InstallLog.sh "${dest_vol}" "Cleanup 1"
 	rm -rf "$chamTemp"
 fi
 
 # Remove /.ChameleonEFI file
 if [ -f "$dest_vol"/.ChameleonEFI ]; then
-   	echo "Removing /.ChameleonEFI file"
+   	#echo "Removing /.ChameleonEFI file"
 	"$scriptDir"InstallLog.sh "${dest_vol}" "Cleanup 2"
     	rm "$dest_vol"/.ChameleonEFI
 fi
 
 # Remove /.ChameleonLogFlag file
 if [ -f "$dest_vol"/.ChameleonLogFlag ]; then
-	echo "Removing /.ChameleonLogFlag file"
+	#echo "Removing /.ChameleonLogFlag file"
 	"$scriptDir"InstallLog.sh "${dest_vol}" "Cleanup 3"
 
 	# we have to add the final install log messages before
